devscripts (2.10.27) UNRELEASED; urgency=low

  * bts: When reassigning bugs, CC the maintainer of the new package(s)
    (Closes: #478014)
  * checkbashisms:
    + When rebuilding the list of bashisms to check, ensure it is based
      on whether the current file is a makefile, rather than whether the
      previous file was. Thanks to Raphael Geissert for the brown paper bag.
    + Match use of "SHELL=bash" as well as "SHELL=/bin/bash" in makefile mode
    + Improve heredoc detection to avoid triggering on "foo bar << x" whilst
      still matching 'cat <<"xyz"'
    + Add a variant on the "[ a == b ]" test
    + Enhance the "echo -e" test to also catch "echo -ne"
    + Add checks for "type" and $UID
  * dcmd: Preserve a leading "./" on .dsc and .changes filenames
    (Closes: #478172)
  * debchange:
    + Correctly handle the BTS returning no bugs for a package when --closes
      is used (either because the package doesn't exist in the archive
      or it has no open bugs) (Closes: #477398)
    + Add intrepid (ibex) to the list of Ubuntu distributions
    + Skip auto-NMU detection if -e was used or when editing an UNRELEASED
      changelog and using the "changelog" release heuristic
  * debcheckout: Use the Vcs-* headers from the highest available version
    rather than the first returned by "apt-get source" (Closes: #477386)
  * debcommit: Ignore --confirm and --edit when combined with --diff
  * licensecheck: Correctly detect LGPLv3+ (Closes: #477742)
  * tagpending: Use option bundling (so that e.g. "tagpending -ni" works)
  * transition-check: New script to determine whether a set of source packages
    is involved in a transition for which uploads to unstable are currently
    blocked (Closes: #477922)
  * debian/control:
    + Add transition-check
    + Recommend libyaml-syck-perl (for transition-check)
    + Move build-essential back to Suggests as it's only required by
      dpkg-depcheck and dpkg-genbuilddeps and will be installed in a build